Fixed offerings after review

--- a/src/partials/offerings.html
+++ b/src/partials/offerings.html
@@ -38,9 +38,6 @@
       </p>
       <ul class="offerings__advantage-list">
         <li class="offerings__advantage-item item">
-          <svg class="offerings__advantage-icon" width="48" height="48">
-            <use href="./images/sprite.svg#rocket"></use>
-          </svg>
           <h3 class="offerings__advantage-title">Fastest Delivery</h3>
           <p class="offerings__advantage-description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
@@ -48,9 +45,6 @@
           </p>
         </li>
         <li class="offerings__advantage-item">
-          <svg class="offerings__advantage-icon" width="48" height="48">
-            <use href="./images/sprite.svg#pointer"></use>
-          </svg>
           <h3 class="offerings__advantage-title">Easy to order</h3>
           <p class="offerings__advantage-description">
             Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse
@@ -58,7 +52,8 @@
           </p>
         </li>
       </ul>
-      <button data-modal-open
+      <button
+        data-modal-open
         class="offerings__order-now-button order__btn--white"
         type="button"
       >
