--- a/src/sass/layout/_subscribe.scss
+++ b/src/sass/layout/_subscribe.scss
@@ -49,7 +49,7 @@
   }
 
   @media screen and (min-width: $desktop) {
-    padding-top: 46px;
+    margin-top: 46px;
     margin-bottom: 20px;
   }
 }
