--- a/src/partials/subscribe.html
+++ b/src/partials/subscribe.html
@@ -31,13 +31,11 @@
         varius enim in eros elementum tristique.
       </p>
       <form class="subscribe__form">
-        <label class="subscribe__label">
+        <div class="subscribe__label">
           <input
             class="subscribe__input"
             name="email"
-            required
             type="email"
-            required
             placeholder="Enter your email"
             required
           />
@@ -49,7 +47,7 @@
               >Not a valid email address (example@email.com)</span
             >
           </div>
-        </label>
+        </div>
         <button class="subscribe__btn" type="submit">Subscribe</button>
       </form>
     </div>
