--- a/src/sass/index.scss
+++ b/src/sass/index.scss
@@ -13,6 +13,7 @@
 
 //components styles
 @import './components/container';
+@import './components/subscribe-anim-btn';
 
 // layouts styles
 @import './layout/header';
