--- a/src/sass/components/_subscribe-anim-btn.scss
+++ b/src/sass/components/_subscribe-anim-btn.scss
@@ -10,11 +10,13 @@
   transition: box-shadow 0.25s;
   width: 103px;
   height: 45px;
+
   button {
     display: block;
     position: relative;
     z-index: 4;
     opacity: var(--text-opacity);
+
     button {
       --text-opacity: 1;
       --success-x: -12px;
@@ -172,10 +174,6 @@
         opacity: var(--text-opacity);
 
         .success {
-          display: block;
-          position: relative;
-          z-index: 4;
-          opacity: var(--text-opacity);
           z-index: 0;
           position: absolute;
           left: 0;
@@ -185,6 +183,20 @@
           opacity: var(--success-opacity);
           color: var(--success);
         }
+        svg {
+          display: inline-block;
+          vertical-align: top;
+          width: 16px;
+          height: 16px;
+          margin: 4px 8px 0 0;
+          fill: none;
+          stroke-width: 2;
+          stroke-linecap: round;
+          stroke-linejoin: round;
+          stroke-dasharray: 14px;
+          stroke: var(--success);
+          stroke-dashoffset: var(--success-stroke);
+        }
       }
     }
     &.valid {
@@ -192,5 +204,17 @@
       --button-cursor: pointer;
       --button-filter: grayscale(0%);
     }
+  }
+}
+html {
+  box-sizing: border-box;
+  -webkit-font-smoothing: antialiased;
+}
+
+* {
+  box-sizing: inherit;
+  &:before,
+  &:after {
+    box-sizing: inherit;
   }
 }
