--- a/src/sass/layout/_footer.scss
+++ b/src/sass/layout/_footer.scss
@@ -21,6 +21,7 @@
   }
   @media screen and (min-width: $desktop) {
     padding-top: 64px;
+    background-size: 1211px;
     background-image: url('../images/footer/footer-background-desktop.png');
   }
 }
